<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="#000000">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_gravity="center_horizontal">

    <Button
       android:text="@string/button1" 
       android:id="@+id/button1"
       android:background="@drawable/red_button"
       style="@style/ButtonText">
   </Button>
   <Button 
       android:text="@string/button2" 
       android:id="@+id/button2"
       android:layout_below="@id/button1"
       android:background="@drawable/blue_button" 
       style="@style/ButtonText">
   </Button>
   <Button 
       android:text="@string/button3" 
       android:id="@+id/button3" 
       android:layout_below="@id/button2"
       android:background="@drawable/purple_button" 
       style="@style/ButtonText"></Button>
   <Button 
       android:text="@string/button4" 
       android:id="@+id/button4" 
       android:layout_below="@id/button3"
       android:background="@drawable/green_button" 
       style="@style/ButtonText">
   </Button>
   <Button 
       android:text="@string/button5" 
       android:id="@+id/button5" 
       android:layout_below="@id/button4"
       android:background="@drawable/black_button" 
       style="@style/ButtonText">
   </Button>
</RelativeLayout>
</ScrollView>