<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_height="match_parent"
   android:layout_width="match_parent"
   android:background="#6f4e37">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg" >
    </RelativeLayout>
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#848482"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#3f3f3f"
        android:textColor="#ffffff"
        android:inputType="text" >

        <requestFocus />
    </EditText>

	<EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#848482"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="#3f3f3f"
        android:textColor="#ffffff"
        android:inputType="textPassword" />

       <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:text="@string/button"
        android:textColor="#3bb9ff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button2"
        android:background="@null"
        android:drawableRight="@drawable/ic_ab_back_holo_light_am"
        android:text="@string/overview"
        android:textColor="#2a2a2a" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>

</RelativeLayout>

</ScrollView>